<resources>
    <string name="app_name">Games catalog</string>
    <string name="game_preview_image">Game preview image</string>
    <string name="game_s_full_description_arrow">Game\'s full description arrow</string>
    <string name="game_list_sample_date">2010</string>
    <string name="game_list_sample_description">Some sample game description goes here. Some sample game description goes here. Some sample game description goes here. Some sample game description goes here.</string>
    <string name="game_list_sample_title">Some sample text goes here</string>
    <string name="open_url_button">Open url</string>
</resources>
