<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8sp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/GameFullImage"
                android:layout_width="match_parent"
                android:layout_height="180sp"
                android:src="@mipmap/ic_launcher"
                android:textAlignment="center"
                android:contentDescription="@string/game_preview_image" />
        </LinearLayout>

        <TextView android:id="@+id/GameFullTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/game_list_sample_title"
            android:padding="10dip"
            android:textColor="#000000"/>

        <TextView android:id="@+id/GameReleaseYear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/game_list_sample_date"
            android:padding="10sp"
            android:textColor="#000000"/>

        <TextView android:id="@+id/GameDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/game_list_sample_description"
            android:padding="10dp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/GameOpenUrl"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/open_url_button"/>
    </LinearLayout>

</ScrollView>